# mandelbrot_kokkos_cmake

./: .gitmodules  CMakeLists.txt  README.md
cmake/: initBuildType.cmake
src/: CMakeLists.txt  constants.hpp  kokkos_shared.hpp  main.cpp  mandelbrot.hpp  write_png.cpp  write_png.hpp  write_ppm.cpp  write_ppm.hpp  write_screen.cpp  write_screen.hpp
